--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <h2 class="font-medium text-2xl text-center">Best Seller</h2>
     </section>
     <section>
-        <div class="grid grid-cols-2 text-center ml-24 md:flex gap-5 justify-between mr-10 ">
+        <div class="grid grid-cols-2  text-center ml-2 md:flex gap-5 justify-between ">
             <div class="border border-black rounded w-40 hover:shadow-xl transform hover:-translate-y-2"><img
                     src="images/plant1.jpg" alt="plant1" class=" w-40 h-40">
                 <h2>Rose plant</h2>
