--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="bg-green-100 p-3 flex justify-between items-center shadow-xl sticky top-0 z-10">
         <h1 class="text-2xl">Greenden</h1>
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+        <svg id="menuicon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
             class="w-6 h-6 md:hidden">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
         </svg>
@@ -25,6 +25,22 @@
             </li>
         </ul>
     </nav>
+     <div id="sidenav" class="bg-green-100 fixed z-20 top-0 transition-all duration-1000" style="width:50%;height:100%;right: -50%;">
+        <div class="text-right p-5">
+            <p id="closenav" class="inline cursor-pointer">X</p>
+        </div>
+         <ul class=" flex flex-col gap-10 items-center text-grey-600  ">
+            <li>
+                <a class="hover:underline hover:text-black" href="">Home</a>
+            </li>
+            <li>
+                <a class="hover:underline  hover:text-black" href="product.html">Products</a>
+            </li>
+            <li>
+                <a class="hover:underline  hover:text-black" href="contact.html">Contacts</a>
+            </li>
+        </ul>
+    </div>
 
                 <section class="bg-white dark:bg-gray-900">
   <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
@@ -52,6 +68,7 @@
         <p class="mt-3">The Standard plant website and responsive for all devices</p>
         <p class="mt-3">&copy; Greenday.com</p>
     </section>
+    <script src="contact.js"></script>
     
 </body>
 </html>
