--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="bg-green-100 p-3 flex justify-between items-center shadow-xl sticky top-0 z-10">
         <h1 class="text-2xl">Greenden</h1>
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+        <svg id="menuicon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
             class="w-6 h-6 md:hidden">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
         </svg>
@@ -27,6 +27,23 @@
             </li>
         </ul>
     </nav>
+    <div id="sidenav" class="bg-green-100 fixed z-20 top-0 transition-all duration-1000" style="width:50%;height:100%;right: -50%;">
+        <div class="text-right p-5">
+            <p id="closenav" class="inline cursor-pointer">X</p>
+        </div>
+         <ul class=" flex flex-col gap-10 items-center text-grey-600  ">
+            <li>
+                <a class="hover:underline hover:text-black" href="">Home</a>
+            </li>
+            <li>
+                <a class="hover:underline  hover:text-black" href="product.html">Products</a>
+            </li>
+            <li>
+                <a class="hover:underline  hover:text-black" href="contact.html">Contacts</a>
+            </li>
+        </ul>
+    </div>
+
     <section class="bg-green-100 h-56 px-4 flex justify-center">
         <div>
             <p class="mb-5">We offer you a wide range of Artificial and Natural Flowers</p>
@@ -86,7 +103,7 @@
         <h2 class="font-medium text-2xl text-center">Best Seller</h2>
     </section>
     <section>
-        <div class="grid grid-cols-2  text-center ml-2 md:flex gap-5 justify-between ">
+        <div class="grid grid-cols-2  text-center ml-5 md:flex gap-5 justify-between ">
             <div class="border border-black rounded w-40 hover:shadow-xl transform hover:-translate-y-2"><img
                     src="images/plant1.jpg" alt="plant1" class=" w-40 h-40">
                 <h2>Rose plant</h2>
@@ -142,7 +159,7 @@
         <p class="mt-3">The Standard plant website and responsive for all devices</p>
         <p class="mt-3">&copy; Greenday.com</p>
     </section>
-
+<script src="index.js"></script>
 </body>
 
 </html>
